# leech-fw

./: .gitmodules
leech-fw/: Cargo.toml
leech-fw/examples/: ps2.rs  ps2_interrupt.rs
leech-fw/src/: main.rs
leech-hal/: Cargo.toml
leech-hal/src/: interface.rs  lib.rs  ps2.rs
litex-pac/: Cargo.toml  soc.svd
litex-pac/src/soc/: metadata.rs  mod.rs
litex-pac/src/soc/instances/: mod.rs  ps2.rs
litex-pac/src/soc/peripherals/: ctrl.rs  ps2.rs
soc/: leech.py  soc.py
soc/peripherals/: ps2.py
svd2ral/: Cargo.toml
